@@ -14,13 +14,17 @@
 import os
 import tempfile
 
+from conary import conaryclient
 from conary import versions
 from conary.lib import log
 from conary.repository import changeset
 from conary.repository import errors
 from conary.repository import filecontainer
 
-def doCommit(repos, changeSetFile, targetLabel):
+def doCommit(cfg, changeSetFile, targetLabel):
+    client = conaryclient.ConaryClient(cfg)
+    repos = client.getRepos()
+
     try:
 	cs = changeset.ChangeSetFromFile(changeSetFile)
     except filecontainer.BadContainer:
